[package]
name    = "QuartTET-ChatNoir"
version = "0.3.9"
edition = "2021"

[dependencies]
log                 = "0.4.22"
env_logger          = "0.11.6"
tokio               = { version = "1.42.0", features = ["full"] }
winit               = "0.30.8"
wgpu                = "23.0.1"
imgui               = "0.12.0"
imgui-winit-support = "0.13.0"
imgui-wgpu          = {path = "libs/imgui-wgpu-rs"}